Dodano sekcję nasi klienci z ikonami

--- a/index.html
+++ b/index.html
@@ -145,6 +145,30 @@
           </ul>
         </div>
       </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="services-team-header">Nasi Klienci</h2>
+          <svg class="icon" width="170px" height="92px">
+            <use href="./icons.svg#icon-client1"></use>
+          </svg>
+          <svg class="icon" width="170px" height="92px">
+            <use href="./icons.svg#icon-client2"></use>
+          </svg>
+          <svg class="icon" width="170px" height="92px">
+            <use href="./icons.svg#icon-client3"></use>
+          </svg>
+          <svg class="icon" width="170px" height="92px">
+            <use href="./icons.svg#icon-client4"></use>
+          </svg>
+          <svg class="icon" width="170px" height="92px">
+            <use href="./icons.svg#icon-client5"></use>
+          </svg>
+          <svg class="icon" width="170px" height="92px">
+            <use href="./icons.svg#icon-client6"></use>
+          </svg>
+        </div>
+      </section>
     </main>
 
     <footer class="footer-style">
