dodano ikony i cienie w index.html

--- a/index.html
+++ b/index.html
@@ -34,8 +34,23 @@
           </ul>
         </nav>
         <ul class="nav-list header-contacts">
-          <li><a class="nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="nav-link" href="tel:+48111111111">+48 111 111 111</a></li>
+          <li>
+            <a class="nav-link" href="mailto:info@devstudio.com">
+              <svg width="16px" height="12px">
+                <use href="./icons.svg#icon-email"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+
+          <li>
+            <a class="nav-link" href="tel:+48111111111">
+              <svg width="16px" height="12px">
+                <use href="./icons.svg#icon-phone"></use>
+              </svg>
+              +48 111 111 111</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -43,8 +58,10 @@
     <main>
       <!-- sekcja zamow usluge -->
       <section class="order-section">
+        
         <h1 class="title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button" class="button-inactive">Zamów usługę</button>
+    
       </section>
 
       <!-- lorem ipsum x4 -->
@@ -52,6 +69,9 @@
         <div class="container">
           <ul class="main-list">
             <li class="main-list-item">
+              <svg width="270" height="120">
+                <use href="./icons.svg#icon-section1"></use>
+              </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -59,6 +79,9 @@
               </p>
             </li>
             <li class="main-list-item">
+              <svg width="270" height="120">
+                <use href="./icons.svg#icon-section2"></use>
+              </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -66,6 +89,9 @@
               </p>
             </li>
             <li class="main-list-item">
+              <svg width="270" height="120">
+                <use href="./icons.svg#icon-section3"></use>
+              </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -73,6 +99,9 @@
               </p>
             </li>
             <li class="main-list-item">
+              <svg width="270" height="120">
+                <use href="./icons.svg#icon-section4"></use>
+              </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
@@ -112,6 +141,53 @@
                 <figcaption>
                   <h3 class="team-member-name">John Doe</h3>
                   <h4 class="team-member-role">Product Designer</h4>
+
+                  <ul class="social-links">
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-instagram"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-twitter"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-facebook"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-linkedin"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
             </li>
@@ -121,6 +197,53 @@
                 <figcaption>
                   <h3 class="team-member-name">John Doe</h3>
                   <h4 class="team-member-role">Frontend Developer</h4>
+
+                  <ul class="social-links">
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-instagram"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-twitter"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-facebook"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-linkedin"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
             </li>
@@ -130,6 +253,53 @@
                 <figcaption>
                   <h3 class="team-member-name">John Doe</h3>
                   <h4 class="team-member-role">Marketing</h4>
+
+                  <ul class="social-links">
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-instagram"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-twitter"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-facebook"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-linkedin"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
             </li>
@@ -139,6 +309,53 @@
                 <figcaption>
                   <h3 class="team-member-name">John Doe</h3>
                   <h4 class="team-member-role">UI Designer</h4>
+
+                  <ul class="social-links">
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-instagram"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-twitter"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-facebook"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                    <li>
+                      <svg class="social-icon" width="44px" height="44px">
+                        <use
+                          href="./icons.svg#icon-linkedin"
+                          width="20px"
+                          height="20px"
+                          x="12"
+                          y="11"
+                        ></use>
+                      </svg>
+                    </li>
+                  </ul>
                 </figcaption>
               </figure>
             </li>
@@ -173,6 +390,7 @@
 
     <footer class="footer-style">
       <div class="container">
+        <div class="footer-left">
         <a class="footer-logo" href="index.html"><span>Web</span>Studio </a>
         <address class="footer-address">m. Warszawa, Aleje Jerozolimskie 21</address>
         <ul class="footer-contact">
@@ -181,6 +399,60 @@
           </li>
           <li><a class="footer-contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
+      </div>
+      <div class="footer-right">
+        <h6>DOŁĄCZ DO NAS</h6>
+        <ul class="website-social-links">
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./icons.svg#icon-instagram"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./icons.svg#icon-twitter"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./icons.svg#icon-facebook"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./icons.svg#icon-linkedin"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+        </ul>
+      </figcaption>
+    </figure>
+  </li>
+</ul>
+      </div>
       </div>
     </footer>
   </body>
