--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,23 @@
           </ul>
         </nav>
         <ul class="nav-list header-contacts">
-          <li><a class="nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="nav-link" href="tel:+48111111111">+48 111 111 111</a></li>
+          <li>
+            <a class="nav-link" href="mailto:info@devstudio.com">
+              <svg width="16px" height="12px">
+                <use href="./images/icons.svg#icon-email" y="1"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+          </li>
+
+          <li>
+            <a class="nav-link" href="tel:+48111111111">
+              <svg width="16px" height="12px">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+              +48 111 111 111</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -196,6 +211,7 @@
 
     <footer class="footer-style">
       <div class="container">
+        <div class="footer-left">
         <a class="footer-logo" href="index.html"><span>Web</span>Studio </a>
         <address class="footer-address">m. Warszawa, Aleje Jerozolimskie 21</address>
         <ul class="footer-contact">
@@ -204,6 +220,60 @@
           </li>
           <li><a class="footer-contact-link" href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
+      </div>
+      <div class="footer-right">
+        <h6>DOŁĄCZ DO NAS</h6>
+        <ul class="website-social-links">
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./images/icons.svg#icon-instagram"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./images/icons.svg#icon-twitter"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./images/icons.svg#icon-facebook"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="website-social-icon" width="44px" height="44px">
+              <use
+                href="./images/icons.svg#icon-linkedin"
+                width="20px"
+                height="20px"
+                x="12"
+                y="11"
+              ></use>
+            </svg>
+          </li>
+        </ul>
+      </figcaption>
+    </figure>
+  </li>
+</ul>
+      </div>
       </div>
     </footer>
   </body>
