zmiana ścieżki icons

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <li>
             <a class="nav-link" href="mailto:info@devstudio.com">
               <svg width="16px" height="12px">
-                <use href="./icons.svg#icon-email"></use>
-              </svg>
+                <use href="./images/icons.svg#icon-email"
+                y="1"></use>
+              </svg> 
               info@devstudio.com</a
             >
           </li>
@@ -46,8 +47,8 @@
           <li>
             <a class="nav-link" href="tel:+48111111111">
               <svg width="16px" height="12px">
-                <use href="./icons.svg#icon-phone"></use>
-              </svg>
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg> 
               +48 111 111 111</a
             >
           </li>
@@ -70,7 +71,7 @@
           <ul class="main-list">
             <li class="main-list-item">
               <svg width="270" height="120">
-                <use href="./icons.svg#icon-section1"></use>
+                <use href="./images/icons.svg#icon-section1"></use>
               </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
@@ -80,7 +81,7 @@
             </li>
             <li class="main-list-item">
               <svg width="270" height="120">
-                <use href="./icons.svg#icon-section2"></use>
+                <use href="./images/icons.svg#icon-section2"></use>
               </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
@@ -90,7 +91,7 @@
             </li>
             <li class="main-list-item">
               <svg width="270" height="120">
-                <use href="./icons.svg#icon-section3"></use>
+                <use href="./images/icons.svg#icon-section3"></use>
               </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
@@ -100,7 +101,7 @@
             </li>
             <li class="main-list-item">
               <svg width="270" height="120">
-                <use href="./icons.svg#icon-section4"></use>
+                <use href="./images/icons.svg#icon-section4"></use>
               </svg>
               <h5 class="main-description-title">LOREM IPSUM</h5>
               <p class="main-description-text">
@@ -146,7 +147,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                           width="20px"
                           height="20px"
                           x="12"
@@ -157,7 +158,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter"
                           width="20px"
                           height="20px"
                           x="12"
@@ -168,7 +169,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                           width="20px"
                           height="20px"
                           x="12"
@@ -179,7 +180,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-linkedin"
+                          href="./images/icons.svg#icon-linkedin"
                           width="20px"
                           height="20px"
                           x="12"
@@ -202,7 +203,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                           width="20px"
                           height="20px"
                           x="12"
@@ -213,7 +214,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter"
                           width="20px"
                           height="20px"
                           x="12"
@@ -224,7 +225,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                           width="20px"
                           height="20px"
                           x="12"
@@ -235,7 +236,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-linkedin"
+                          href="./images/icons.svg#icon-linkedin"
                           width="20px"
                           height="20px"
                           x="12"
@@ -258,7 +259,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                           width="20px"
                           height="20px"
                           x="12"
@@ -269,7 +270,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter"
                           width="20px"
                           height="20px"
                           x="12"
@@ -280,7 +281,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                           width="20px"
                           height="20px"
                           x="12"
@@ -291,7 +292,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-linkedin"
+                          href="./images/icons.svg#icon-linkedin"
                           width="20px"
                           height="20px"
                           x="12"
@@ -314,7 +315,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                           width="20px"
                           height="20px"
                           x="12"
@@ -325,7 +326,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-twitter"
+                          href="./images/icons.svg#icon-twitter"
                           width="20px"
                           height="20px"
                           x="12"
@@ -336,7 +337,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-facebook"
+                          href="./images/icons.svg#icon-facebook"
                           width="20px"
                           height="20px"
                           x="12"
@@ -347,7 +348,7 @@
                     <li>
                       <svg class="social-icon" width="44px" height="44px">
                         <use
-                          href="./icons.svg#icon-linkedin"
+                          href="./images/icons.svg#icon-linkedin"
                           width="20px"
                           height="20px"
                           x="12"
@@ -367,22 +368,22 @@
         <div class="container">
           <h2 class="services-team-header">Nasi Klienci</h2>
           <svg class="icon" width="170px" height="92px">
-            <use href="./icons.svg#icon-client1"></use>
+            <use href="./images/icons.svg#icon-client1"></use>
           </svg>
           <svg class="icon" width="170px" height="92px">
-            <use href="./icons.svg#icon-client2"></use>
+            <use href="./images/icons.svg#icon-client2"></use>
           </svg>
           <svg class="icon" width="170px" height="92px">
-            <use href="./icons.svg#icon-client3"></use>
+            <use href="./images/icons.svg#icon-client3"></use>
           </svg>
           <svg class="icon" width="170px" height="92px">
-            <use href="./icons.svg#icon-client4"></use>
+            <use href="./images/icons.svg#icon-client4"></use>
           </svg>
           <svg class="icon" width="170px" height="92px">
-            <use href="./icons.svg#icon-client5"></use>
+            <use href="./images/icons.svg#icon-client5"></use>
           </svg>
           <svg class="icon" width="170px" height="92px">
-            <use href="./icons.svg#icon-client6"></use>
+            <use href="./images/icons.svg#icon-client6"></use>
           </svg>
         </div>
       </section>
@@ -406,7 +407,7 @@
           <li>
             <svg class="website-social-icon" width="44px" height="44px">
               <use
-                href="./icons.svg#icon-instagram"
+                href="./images/icons.svg#icon-instagram"
                 width="20px"
                 height="20px"
                 x="12"
@@ -417,7 +418,7 @@
           <li>
             <svg class="website-social-icon" width="44px" height="44px">
               <use
-                href="./icons.svg#icon-twitter"
+                href="./images/icons.svg#icon-twitter"
                 width="20px"
                 height="20px"
                 x="12"
@@ -428,7 +429,7 @@
           <li>
             <svg class="website-social-icon" width="44px" height="44px">
               <use
-                href="./icons.svg#icon-facebook"
+                href="./images/icons.svg#icon-facebook"
                 width="20px"
                 height="20px"
                 x="12"
@@ -439,7 +440,7 @@
           <li>
             <svg class="website-social-icon" width="44px" height="44px">
               <use
-                href="./icons.svg#icon-linkedin"
+                href="./images/icons.svg#icon-linkedin"
                 width="20px"
                 height="20px"
                 x="12"
