--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
 
     <main>
       <!-- sekcja zamow usluge -->
+      <div class="background-strap">
       <section class="order-section">
         
         <h1 class="title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button" class="button-inactive">Zamów usługę</button>
     
       </section>
-
+    </div>
       <!-- lorem ipsum x4 -->
       <section class="section">
         <div class="container">
